# AI-CHATBOT

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AUTH_FIXES_APPLIED.md  AZURE_DEPLOYMENT_CHECKLIST.md  BOT_READY.md  CHANGES.md  CHECKLIST.md  CONTRIBUTING.md  DELIVERY_STATUS.md  DEMO_DAY_GUIDE.md  DEMO_REFERENCE_CARD.md  DEMO_SCRIPT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  Dockerfile  Dockerfile.whatsapp  ENHANCEMENTS_SUMMARY.md  FINAL_CHECKLIST.py  FINAL_MFA_WHATSAPP_SUMMARY.txt  FINAL_STATUS.md  FINAL_STATUS_PRESENTATION_READY.txt  FIX_NO_RESPONSE.md  LICENSE  LOGIN_AUTH_GUIDE.md  MFA_DEMO_SETUP.py  MFA_DEMO_SETUP_DEBUG.py  MFA_PRESENTATION_CARD.md  MFA_PRESENTATION_READY.txt  MFA_QUICK_START_PRESENTATION.md  MFA_SETUP_GUIDE.md  MFA_VERIFY_SETUP.py  MFA_WHATSAPP_COMPLETE_GUIDE.md  Makefile  PRESENTATION_CHECKLIST_MFA.md  PRE_DEMO_CHECKLIST.md  PROJECT_COMPLETE_PHASE_1.md  PROJECT_STATUS.md  (+69 more)
alembic/: env.py
auth/: mfa_whatsapp.py
bazaarbot/: __init__.py  cache.py  celery_app.py  config.py  database.py  database_pg.py  models.py
config/: settings.py  whatsapp_setup.py
css/: style.css
demo_mfa_setup/: demo_accounts.json
desktop/: enhanced_chatbot.py  enhanced_chatbot_pro.py  enhanced_chatbot_pro_modules.py  requirements.txt
docs/: ARCHITECTURE.md  ARCHITECTURE_COMPREHENSIVE.md  ARCHITECTURE_FOR_SALES_AND_HIRING.md  ARCHITECTURE_V2.mmd  ARCHITECTURE_V2_EXPLAINED.md  AZURE_DEPLOYMENT_GUIDE.md  CHANGELOG.md  CHANGELOG_PRO.md  CLEANUP_LOG_20260225-111604.md  CLIENT_PROPOSAL_TEMPLATE_PK_BEGINNER.md  COMPLETE_SUMMARY.md  (+29 more)
(+142 files in other folders)
