[metadata]
name = whatsapp-inventory-bot
version = 1.0.0
description = WhatsApp Business AI Chatbot for Stock/Inventory Management
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/whatsapp-inventory-bot
license = MIT

[options]
packages = find:
python_requires = >=3.10
install_requires =
    Flask==3.0.0
    SQLAlchemy==2.0.23
    psycopg2-binary==2.9.9

[flake8]
# Code quality settings
max-line-length = 120
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    .venv,
    .venv*,
    build,
    dist,
    .eggs,
    *.egg-info,
    migrations,
    .pytest_cache

per-file-ignores =
    __init__.py:F401,F403
    tests/*:F401,F811,F841

[isort]
# Import sorting
profile = black
multi_line_output = 3
include_trailing_comma = True
line_length = 120
skip_glob = .venv*

[mypy]
# Type checking
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
disallow_incomplete_defs = False
ignore_missing_imports = True

[tool:pytest]
# Override pytest inline config
testpaths = tests

[bdist_wheel]
universal = 0
